<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/result"
        android:textSize="25sp"
        android:layout_marginTop="25sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_trophy"
        tools:ignore="ImageContrastCheck" />
    <TextView
        android:id="@+id/congrats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/hey_congratulations"
        android:textSize="30sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/art"
        android:layout_marginTop="25dp"
        android:textSize="25sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/guessed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/you_guessed_9_out_of_9_questions_correct"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
         />
    <Button
        android:id="@+id/btn_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:textColor="@color/purple_500"
        android:layout_marginTop="15dp"
        android:text="@string/finished"/>
</androidx.appcompat.widget.LinearLayoutCompat>